# rcsniff2

./: Cargo.toml  README.md
src/: encryption.rs  lib.rs  main.rs  serialization.rs  util.rs
src/serialization/: op_code.rs  type_code.rs
