[package]
name = "rcfakeclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.81"
async-recursion = "1.1.0"
base64 = "0.22.0"
block-padding = "0.3.3"
cbc = "0.1.2"
enum_dispatch = "0.3.12"
netdev = "0.24.0"
newtype = "0.2.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
pnet = "0.34.0"
rand = "0.8.5"
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt", "full"] }
