[package]
name = "rcfakeclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util
anyhow = "1.0.81"
enum_dispatch = "0.3.12"
strum = { version = "0.26.2", features = ["derive"] }
newtype = "0.2.1"

# networking
tokio = { version = "1.36.0", features = ["macros", "rt", "full"] }
pnet = "0.34.0"
netdev = "0.24.0"

# crypto
aes = "0.8.4"
cbc = "0.1.2"
sha2 = "0.10.8"
block-padding = "0.3.3"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
